WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
241367
REGRESSION(
r294536
): NativeImages copied from ImageBufferIOSurfaceBackend are mutated after copy
https://bugs.webkit.org/show_bug.cgi?id=241367
Summary
REGRESSION(r294536): NativeImages copied from ImageBufferIOSurfaceBackend are...
Kimmo Kinnunen
Reported
2022-06-07 04:04:34 PDT
REGRESSION(
r294536
): NativeImages copied from ImageBufferIOSurfaceBackend are mutated after copy Before GPUP changes the IOSurface, CGImages in WP must copy the contents. From
bug 240368
.
Attachments
Add attachment
proposed patch, testcase, etc.
Kimmo Kinnunen
Comment 1
2022-06-07 04:26:52 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/1346
Radar WebKit Bug Importer
Comment 2
2022-06-14 04:05:13 PDT
<
rdar://problem/95100686
>
EWS
Comment 3
2022-06-22 12:59:58 PDT
Committed
r295746
(
251751@main
): <
https://commits.webkit.org/251751@main
> Reviewed commits have been landed. Closing PR #1346 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug